--- a/valorant-api-net.csproj
+++ b/valorant-api-net.csproj
@@ -9,9 +9,14 @@
         <AssemblyName>Valorant</AssemblyName>
         <Authors>stefa9</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>1.0.4</Version>
+        <Version>1.0.5</Version>
         <Title>Valorant .NET API</Title>
         <Description>Package for interacting with the unofficial in-game Valorant API</Description>
+        <PackageProjectUrl>https://github.com/stefa-n/valorant-api-net</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/stefa-n/valorant-api-net/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/stefa-n/valorant-api-net</RepositoryUrl>
+        <PackageTags>Valorant</PackageTags>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
