--- a/valorant-api-net.csproj
+++ b/valorant-api-net.csproj
@@ -9,7 +9,7 @@
         <AssemblyName>Valorant</AssemblyName>
         <Authors>stefa9</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>1.0.5</Version>
+        <Version>1.0.6</Version>
         <Title>Valorant .NET API</Title>
         <Description>Package for interacting with the unofficial in-game Valorant API</Description>
         <PackageProjectUrl>https://github.com/stefa-n/valorant-api-net</PackageProjectUrl>
@@ -17,6 +17,7 @@
         <RepositoryUrl>https://github.com/stefa-n/valorant-api-net</RepositoryUrl>
         <PackageTags>Valorant</PackageTags>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <Copyright>stefa-n</Copyright>
     </PropertyGroup>
 
     <ItemGroup>
